--- a/test_webpay.html
+++ b/test_webpay.html
@@ -17,11 +17,11 @@
                     headers: {
                         'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify({ venta: 4 })
+                    body: JSON.stringify({ venta: 1 })
                 });
 
-                if (!response.ok) {
-                    throw new Error("Error al contactar el backend");
+                if (response.status !== 200) {
+                    throw new Error("Error al contactar el backend: " + response.Mensaje);
                 }
 
                 const data = await response.json();
